# drom

./: .drom  .gitignore  .gitignore2  .ocamlformat  .ocamlformat-ignore  .ocp-indent  CHANGES.md  CONTRIBUTING.md  LICENSE.md  Makefile  Makefile.drom  README.md  TODO  dot_gitattributes  drom-deps.opam.locked  drom-lib.opam  drom-opam.deps  drom.opam  drom.toml  drom_lib.opam  dune  dune-project  dune_  index.html  log  style.css
Meetings/: cr-2020-08-17.txt
doc/: index.html
docs/: index.html  index.md  style.css
main/: dune  dune2  index.mld  main.ml
opam/: drom.opam  drom_lib.opam  drom_share.opam  drom_toml.opam
scripts/: after.sh  before-sphinx.sh  before.sh  copy-bin.sh  static-build.sh  test-drom-projects.sh  test-drom-skeletons.sh  test-drom.sh
share/drom/skeletons/projects/rust_binding/: Cargo.toml  drom.toml  skeleton.toml
sphinx/: .buildinfo  about.html  about.rst  commands.html  commands.rst  conf.py  config.html  config.rst  genindex.html  github.html  github.rst  index.html  index.rst  install.html  install.rst  license.html  license.rst  licenses.html  objects.inv  (+11 more)
src/drom_lib/: build.ml  build.mli  call.ml  call.mli  commandBuild.ml  commandBuildDeps.ml  commandClean.ml  commandConfig.ml  commandDep.ml  commandDevDeps.ml  commandDoc.ml  commandFmt.ml  commandHeaders.ml  commandInit.ml  commandInstall.ml  commandList.ml  commandLock.ml  commandNew.ml  commandOdoc.ml  commandOpamPlugin.ml  commandPackage.ml  commandPackage.mli  commandProject.ml  commandPromote.ml  commandPublish.ml  commandRst.ml  commandRun.ml  commandSphinx.ml  commandTest.ml  commandToml.ml  commandTop.ml  commandTree.ml  commandUninstall.ml  commandUpdate.ml  config.ml  config.mli  configparser.ml  configuration_Map.mli  dune  dune.ml  (+49 more)
src/drom_lib/licenses/BSD2/: HEADER  LICENSE
src/drom_lib/licenses/BSD3/: HEADER  LICENSE
src/drom_lib/licenses/GPL3/: HEADER  NAME
src/drom_lib/licenses/ISC/: HEADER
src/drom_lib/licenses/LGPL2/: HEADER  LICENSE  NAME
src/drom_lib/licenses/MIT/: HEADER
src/drom_lib/share/drom/licenses/: BSD2.toml  BSD3.toml  ISC.toml  LGPL2.toml
src/drom_lib/share/drom/skeletons/: README.md
src/drom_lib/share/drom/skeletons/projects/c_binding/: drom.toml
src/drom_lib/share/drom/skeletons/projects/ctypes_foreign/: drom.toml  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/ctypes_stubs/: drom.toml  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/js_lib/: drom.toml
src/drom_lib/share/drom/skeletons/projects/js_prg/: drom.toml  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/menhir/: drom.toml  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/mini_lib/: drom.toml
src/drom_lib/share/drom/skeletons/projects/mini_prg/: drom.toml  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/ppx_deriver/: drom.toml
src/drom_lib/share/drom/skeletons/projects/ppx_rewriter/: drom.toml
src/drom_lib/share/drom/skeletons/projects/program/: drom.toml  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/rust_binding/: drom.toml
src/drom_lib/share/drom/skeletons/projects/virtual/: CHANGES.md  LICENSE.md  Makefile  README.md  dot_gitignore  dot_ocamlformat  dot_ocamlformat-ignore  dot_ocp-indent  dune-project_  dune_  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/virtual/docs/: README.txt
src/drom_lib/share/drom/skeletons/projects/virtual/docs/doc/: index.html
src/drom_lib/share/drom/skeletons/projects/virtual/dot_github/workflows/: workflow.yml
src/drom_lib/share/drom/skeletons/projects/virtual/scripts/: after.sh  before.sh
src/drom_lib/share/drom/skeletons/projects/virtual/sphinx/: index.rst  license.rst
src/drom_lib/share/drom/skeletons/projects/virtual/test/expect-tests/: dune_  test.ml
src/drom_lib/share/drom/skeletons/projects/virtual/test/output-tests/: test2.ml
src/drom_lib/share/drom/skeletons/projects/vue/: drom.toml  index.html  skeleton.toml
src/drom_lib/share/drom/skeletons/projects/wasm_binding/: drom.toml  skeleton.toml
src/drom_lib/skel_packer/: dune  skel_packer.ml
src/drom_lib/skeletons/default/package/: dune
src/drom_lib/skeletons/default/project/: Makefile  dot_gitignore  dot_ocamlformat
src/drom_lib/skeletons/default/project/dot_github/workflows/: workflow.yml
src/drom_lib/skeletons/default/project/sphinx/: about.rst  index.rst  install.rst
src/drom_lib/skeletons/default/project/test/expect-tests/: dune
src/drom_lib/skeletons/projects/: library.toml  program.toml  virtual.toml
src/drom_lib/skeletons/projects/virtual/: Makefile  dot_gitignore  dot_ocamlformat  dot_ocamlformat-ignore  dot_ocp-indent  dune
src/drom_lib/skeletons/projects/virtual/docs/: dot_nojekyll  index.html  style.css
src/drom_lib/skeletons/projects/virtual/dot_github/workflows/: doc-deploy.yml  workflow.yml
src/drom_lib/skeletons/projects/virtual/sphinx/: conf.py  license.rst
src/drom_lib/skeletons/projects/virtual/sphinx/under_static/css/: fixes.css
src/drom_lib/skeletons/projects/virtual/test/inline-tests/: dune  test.ml
src/drom_lib/skeletons/projects/virtual/test/output-tests/: dune  test1.expected  test2.expected  test2.ml
src/orig/toml.7.1.0/: .gitignore  .ocamlformat  CHANGES.md  README.md  dune  dune-project  toml.opam
src/orig/toml.7.1.0/.github/workflows/: build.yml  deploy.yml
src/orig/toml.7.1.0/doc/: index.html  style.css
src/orig/toml.7.1.0/src/: compare.ml  dune  lenses.ml  lenses.mli  lexer.mll  menhir_parser.mly  parser.ml  parser.mli  printer.ml  printer.mli  types.ml  unicode.ml
src/orig/toml.7.1.0/tests/: compare_test.ml  dune  key_test.ml  lenses_test.ml  official_example.ml  official_example.toml  official_example4.ml  official_example4.toml  parser_test.ml  printer_test.ml  types_test.ml  unicode_test.ml  utils.ml
test/output-tests/: dune  dune.drom  dune_  test2.expected  test2.ml
(+673 files in other folders)
