(library
 (name drom_lib)
 (public_name drom_lib)
 (libraries toml opam-file-format ez_file ez_config ez_cmdliner)
 
)
(ocamllex configuration_Parser)

(documentation
  (package drom_lib))
(rule
  (targets skel_default.ml)
  (deps
skeletons/default/project/dot_ocp-indent
skeletons/default/project/dot_ocamlformat-ignore
skeletons/default/project/LICENSE.md
skeletons/default/project/CHANGES.md
skeletons/default/project/README.md
skeletons/default/project/dot_ocamlformat
skeletons/default/project/sphinx/index.rst
skeletons/default/project/sphinx/install.rst
skeletons/default/project/sphinx/about.rst
skeletons/default/project/sphinx/conf.py
skeletons/default/project/sphinx/license.rst
skeletons/default/project/sphinx/under_static/css/fixes.css
skeletons/default/project/Makefile
skeletons/default/project/dot_gitignore
skeletons/default/project/test/output-tests/test1.expected
skeletons/default/project/test/output-tests/dune
skeletons/default/project/test/output-tests/test2.expected
skeletons/default/project/test/output-tests/test2.ml
skeletons/default/project/test/expect-tests/dune
skeletons/default/project/test/expect-tests/test.ml
skeletons/default/project/test/inline-tests/dune
skeletons/default/project/test/inline-tests/test.ml
skeletons/default/project/docs/doc/index.html
skeletons/default/project/docs/dot_nojekyll
skeletons/default/project/docs/index.html
skeletons/default/project/docs/sphinx/index.html
skeletons/default/project/docs/style.css
skeletons/default/project/dot_github/workflows/workflow.yml

skeletons/default/package/dune
     )
  (action
    (with-stdout-to %{targets}
    (run skel_packer default skeletons/default))))

(data_only_dirs skeletons)

