; This file was created by `drom new`

; a first example where we would test the behavior of one of the executables
; that we generate else-where

(rule
 (deps test1.expected)
 (action
  (with-stdout-to
   test1.output
   (run cat test1.expected))))

(rule
 (alias runtest)
 (action
  (diff test1.expected test1.output)))

; a second example where we generate a file and test its output:

(include dune.drom)
