(library
 (public_name toml)
 (modules
  compare
  lenses
  lexer
  menhir_parser
  min
  parser
  printer
  types
  unicode)
 (private_modules lexer menhir_parser)
 (libraries str unix ISO8601)
 (instrumentation
  (backend bisect_ppx --exclusions src/bisect.exclude)
  (deps bisect.exclude)))

(menhir
 (modules menhir_parser))

(ocamllex lexer)
