(library
 (name utils)
 (modules utils)
 (libraries ounit2 toml)
 (wrapped false))

(tests
 (names
  compare_test
  key_test
  lenses_test
  parser_test
  printer_test
  types_test
  unicode_test)
 (modules
  compare_test
  key_test
  lenses_test
  parser_test
  printer_test
  types_test
  unicode_test)
 (libraries ounit2 toml threads utils))

(test
 (name official_example4)
 (deps ./official_example4.toml)
 (modules official_example4)
 (libraries ounit2 toml threads utils))

(test
 (name official_example)
 (deps ./official_example.toml)
 (modules official_example)
 (libraries ounit2 threads toml utils))
